# winegod-app

./: $PROFILE.txt  .gitignore  CLAUDE.md  CLAUDE_RESPOSTAS_CORRECAO_COMMERCE_OPERACAO_RESIDUAL_EXTERNO_FINAL_2026-04-24.md  CLAUDE_RESPOSTAS_CORRECAO_FINALISSIMA_GO_LIVE_COMMERCE_AUTOMACAO_DOCS_2026-04-24.md  CLAUDE_RESPOSTAS_CORRECAO_FINAL_COMMERCE_DQ_V3_AMAZON_TIER1_TIER2_2026-04-23.md  CLAUDE_RESPOSTAS_CORRECAO_GO_LIVE_COMMERCE_PARTICOES_TIER_MATCHING_2026-04-24.md  CLAUDE_RESPOSTAS_CORRECAO_MINIMA_COMMERCE_README_VALIDATOR_2026-04-24.md  CLAUDE_RESPOSTAS_CORRECAO_MINIMA_FINAL_COMMERCE_DQ_V3_AMAZON_TIER1_TIER2_2026-04-23.md  CLAUDE_RESPOSTAS_EXECUCAO_TOTAL_COMMERCE_FECHAMENTO_FINAL_2026-04-24.md  CLAUDE_RESPOSTAS_EXECUCAO_TOTAL_COMMERCE_OPERACAO_RESIDUAL_EXTERNO_FINAL_2026-04-24.md  CLAUDE_RESPOSTAS_EXECUCAO_TOTAL_DISCOVERY_ENRICHMENT_PRODUCAO_2026-04-24.md  CLAUDE_RESPOSTAS_EXECUCAO_TOTAL_FINALIZACAO_COMMERCE_DQ_V3_AMAZON_TIER1_TIER2_2026-04-23.md  CLAUDE_RESPOSTAS_EXECUCAO_TOTAL_NAO_COMMERCE_REVIEWS_DISCOVERY_ENRICHMENT_2026-04-24.md  CLAUDE_RESPOSTAS_EXECUCAO_TOTAL_RESTANTES_SCRAPERS_PLATAFORMA_2026-04-23.md  CLAUDE_RESPOSTAS_EXECUCAO_TOTAL_REVIEWS_DOMINIO_FINAL_2026-04-24.md  CLAUDE_RESPOSTAS_GO_LIVE_COMMERCE_RESIDUAL_EXTERNO_E_ARTIFACTS_2026-04-23.md  DEPLOY.md  README.md  WINEGOD_PLATAFORMA_CENTRAL_SCRAPERS_FASE_2_CHECKLIST.md  WINEGOD_PLATAFORMA_CENTRAL_SCRAPERS_FASE_3_CHECKLIST.md  WINEGOD_PLATAFORMA_CENTRAL_SCRAPERS_FASE_4_CHECKLIST.md  test_fotos_resultados.json  test_fotos_vinhos.py  test_ocr_direto.py  test_ocr_resultados.json  test_p11_p13_baco.py  wg-novo.md  (+1 more)
(+25482 files in other folders)
