[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winegod-scraper-sdk"
version = "0.1.0"
description = "Winegod Data Ops — SDK de telemetria para scrapers/adapters (Fase 1)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "winegod", email = "murilo@winegod.ai" }]
dependencies = [
  "pydantic>=2.6.0",
  "pyyaml>=6.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-mock>=3.12",
]

# Entry point removido (auditoria Fase 1 §5.4): canary_scraper.py fica fora
# do pacote (em sdk/examples/) e eh executado como script direto:
#   python sdk/examples/canary_scraper.py --dry-run

[tool.setuptools.packages.find]
where = ["."]
include = ["winegod_scraper_sdk*"]

[tool.setuptools.package-data]
"winegod_scraper_sdk" = ["py.typed"]
